--- a/experiment/index.html
+++ b/experiment/index.html
@@ -34,7 +34,7 @@
             type: jsPsychHtmlButtonResponse,
             stimulus: `
           <p>In this experiment, you will hear a series of tones, which are either of a low pitch, or a high pitch.</p>
-          <p>Whenever you hear the high rone, press the spacebar.</p>
+          <p>Whenever you hear the high tone, press the spacebar.</p>
           <p>You can listen to the two types of tones below.</p>
           <div>
               <p>Low tone</p>
