--- a/experiment/index.html
+++ b/experiment/index.html
@@ -89,8 +89,14 @@
                 trial_name: "tone-presentation"
             },
             on_start(data) {
+                if (Math.random() <= 0.8) {
+                    data.stimulus = test_stimuli[0].stimulus;
+                } else {
+                    data.stimulus = test_stimuli[1].stimulus;
+                }
+
                 // Set the lux square to black
-                if (data.stimulus === test_stimuli.find((test) => test.stimulusType === "odd").stimulus) {
+                if (data.stimulus === test_stimuli[1].stimulus) {
                     createMarker("black");
                 }
             },
@@ -104,7 +110,7 @@
             timeline: [fixation, test],
             timeline_variables: test_stimuli,
             randomize_order: true,
-            repetitions: 5
+            repetitions: 15
         };
 
         timeline.push(test_procedure);
