Basic preprocessing impl

--- a/experiment/index.html
+++ b/experiment/index.html
@@ -41,7 +41,8 @@
 
         const preload = {
             type: jsPsychPreload,
-            audio: [highTone, lowTone]
+            audio: [highTone, lowTone],
+            show_progress_bar: true
         };
 
         timeline.push(preload);
